--- a/entries/application/wordpress.twig
+++ b/entries/application/wordpress.twig
@@ -6,6 +6,7 @@ providers:
     commits:
         provider: Commit
         api: https://api.github.com/repos/corley/upcloo-wordpress-plugin/commits
+        repo: https://github.com/corley/upcloo-wordpress-plugin
 ---
 <div class="content">
     <section>
