--- a/entries/documentation/searches.twig
+++ b/entries/documentation/searches.twig
@@ -99,8 +99,8 @@ green computing (1)</pre>
     		<h1 id="ranges">Ranges</h1>
     		<p>
     			Ranges are quite complex, it was designed for create a complex operation.
-    			Ranges are valid only for <code>date</code> fields and <code>integers</code>
-    			and <code>decimal</code>.
+    			Ranges are valid only for <code>date</code> fields or <code>integer</code>
+    			or <code>decimal</code>.
     		</p>
     		<p>
     		    Suppose that you want to group results of a search by year. You can use a
