--- a/entries/sdk/php.twig
+++ b/entries/sdk/php.twig
@@ -6,6 +6,7 @@ providers:
     commits:
         provider: Commit
         api: https://api.github.com/repos/corley/upcloo-php-sdk/commits
+        repo: https://github.com/corley/upcloo-php-sdk
 ---
 <div class="content">
     <section>
@@ -28,7 +29,7 @@ providers:
             </div>
         </div>
     </section>
-    <section>
+    <section class="sdk-sep">
         <div class="row">
             <div class="span12">
                 <h2>Setting up your credentials</h2>
