--- a/entries/sdk/commits.twig
+++ b/entries/sdk/commits.twig
@@ -1,5 +1,5 @@
 <ul>
 {% for commit in this.providers.commits %}
-    <li><a target="_blank" href="https://github.com/commit/upcloo-wordpress-plugin/commit/{{ commit.commit.tree.url }}">{{ commit.commit.message }}</a></li>
+    <li><a target="_blank" href="{{ commit.commit.tree.html_url }}">{{ commit.commit.message }}</a></li>
 {% endfor %}
 </ul>
