--- a/entries/documentation.twig
+++ b/entries/documentation.twig
@@ -1,6 +1,7 @@
 permalink: documentation/
 ---
 <div class="content">
+    <div class="row"><div class="span12"><h1>Documentation</h1></div></div>
     <div class="row">
         <div class="span12">
             <h3>UpCloo services</h3>
