--- a/entries/documentation.twig
+++ b/entries/documentation.twig
@@ -30,15 +30,20 @@ permalink: documentation/
         </div>
         <div class="span6">
             <p>
-                UpCloo is designed around an index that works. You can
+                UpCloo is designed around an index. You can
                 interact with this index using dedicated <a href="/documentation/xml-rest-service.html">XML REST service</a>.
             </p>
             <ul>
-                <li>Retrive</li>
-                <li>Insert</li>
-                <li>Update</li>
-                <li>Delete</li>
+                <li><a href="/documentation/rest/get.html">Retrive (GET)</a></li>
+                <li><a href="/documentation/rest/index.html">Insert (INDEX)</a></li>
+                <li><a href="/documentation/rest/index.html">Update (INDEX)</a></li>
+                <li><a href="/documentation/rest/delete.html">Invalidation (DELETE)</a></li>
             </li>
+            </ul>
+            <p>
+                For simplify your work, you can choose an already available SDK. An SDK wrap the XML REST
+                service for integrating UpCloo quickly into an existing application.
+            </p>
         </div>
         <div class="span6">
             <p>
@@ -52,6 +57,9 @@ permalink: documentation/
                 <li><a href="/documentation/types/dates-times.html">Dates and Times</a></li>
                 <li><a href="/documentation/types/texts.html">Texts</a></li>
             </ul>
+            <p>
+                UpCloo types follow tipical high-level programming language variables types.
+            </p>
         </div>
     </div>
     <div class="row">
