--- a/entries/sdk/php.twig
+++ b/entries/sdk/php.twig
@@ -17,13 +17,13 @@ providers:
             </div>
             <div class="span6">
                 <h3>Issues list</h3>
-                {% include 'issues.twig' %}
+                {% include '/../issues.twig' %}
             </div>
             <div class="span6">
                 <h3>Latest Updates</h3>
-                {% include 'commits.twig' %}
+                {% include '/../commits.twig' %}
             </div>
-            {% include 'github.twig' %}
+            {% include '/../github.twig' %}
             <div class="span12">
                 <p>Now you are ready to use UpCloo PHP SDK.</p>
             </div>
