--- a/entries/documentation.twig
+++ b/entries/documentation.twig
@@ -26,7 +26,7 @@ permalink: documentation/
             <h3>UpCloo Operations</h3>
         </div>
         <div class="span6">
-            <h3>UpCloo Types Definition</h3>
+            <h3 id="types">UpCloo Types Definition</h3>
         </div>
         <div class="span6">
             <p>
@@ -64,7 +64,7 @@ permalink: documentation/
     </div>
     <div class="row">
         <div class="span6">
-            <h3>UpCloo Fields Definition</h3>
+            <h3 id="fields">UpCloo Fields Definition</h3>
         </div>
         <div class="span6">
             <h3>UpCloo Dynamic Fields</h3>
