Added performances and minor fixes

--- a/entries/documentation.twig
+++ b/entries/documentation.twig
@@ -19,6 +19,10 @@ permalink: documentation/
                 All UpCloo SDKs and plugins are released under <a href="/mit-license.html">MIT license</a> where not
                 otherwise specified.
             </p>
+            <p>
+                If you are interested on perfomances of UpCloo over the network: 
+                <a href="/documentation/performance.html">see here</a>
+            </p>
         </div>
     </div>
     <div class="row">
