--- a/entries/documentation/searches.twig
+++ b/entries/documentation/searches.twig
@@ -3,8 +3,9 @@ permalink: /documentation/searches
 <div class="content">
     <div class="row">
         <div class="span12">
+            <h1>UpCloo Search</h1>
             <p>
-                UpCloo Search is the search services provided by UpCloo cloud platform.
+                UpCloo Search is the search service provided by UpCloo cloud platform.
                 Service highlights are:
             </p>
             <ul>
@@ -18,7 +19,7 @@ permalink: /documentation/searches
     </div>
     <div class="row">
         <div class="span12">
-        	<h1 id="highlight">Highlight Feature</h1>
+        	<h2 id="highlight">Highlight Feature</h2>
             The highlight feature adding a markup on search results based on your 
             query.
         </div>
@@ -36,7 +37,7 @@ response:
     </div>
     <div class="row">
     	<div class="span12">
-    		<h1 id="network">Network Feature</h1>
+    		<h2 id="network">Network Feature</h2>
     		<p>
     		"Network" is the feature that allow you to create a phisical connection
     		between two or more completely different applications. Networks work also
@@ -51,7 +52,7 @@ response:
     </div>
     <div class="row">
     	<div class="span12">
-    		<h1 id="facets">Filters</h1>
+    		<h2 id="facets">Filters</h2>
     		<p>
     			Filter is the <code>where</code> statement for UpCloo Search.
     			Everytime you have to filter your result set use this feature.
@@ -67,7 +68,7 @@ response:
 	</div>
     <div class="row">
     	<div class="span12">
-    		<h1 id="facets">Facets</h1>
+    		<h2 id="facets">Facets</h2>
     		<p>
     			Faceting is a useful feature of UpCloo that's allow you to search for
     			something and create groups for your query. In simple words UpCloo group
@@ -96,7 +97,7 @@ green computing (1)</pre>
     </div>
     <div class="row">
     	<div class="span12">
-    		<h1 id="ranges">Ranges</h1>
+    		<h2 id="ranges">Ranges</h2>
     		<p>
     			Ranges are quite complex, it was designed for create a complex operation.
     			Ranges are valid only for <code>date</code> fields or <code>integer</code>
