--- a/entries/sdk/php.twig
+++ b/entries/sdk/php.twig
@@ -33,6 +33,14 @@ providers:
         <div class="row">
             <div class="span12">
                 <h2>Getting Started</h2>
+                <p>
+                    First of all you have to get the library using the source tree
+                    or using the <a href="/sdk/php/phar.html">PHAR archives</a>.
+                </p>
+                <p>
+                    If you use ZF (Zend Framework) you have an already designed 
+                    <a href="/sdk/php/zf.html">resoure bootstrap</a>.
+                </p>
             </div>
             <div class="span12">
                 <h3>Load the library</h3>
