Local storage, structure and others on PHP SDK

--- a/entries/sdk/php.twig
+++ b/entries/sdk/php.twig
@@ -34,7 +34,7 @@ providers:
             <div class="span12">
                 <h2>Getting Started</h2>
                 <p>
-                    First of all you have to get the library using the source tree
+                    First of all you have to get the library using the <a href="/sdk/php/structure">source tree</a>
                     or using the <a href="/sdk/php/phar.html">PHAR archives</a>.
                 </p>
                 <p>
@@ -228,6 +228,8 @@ $manager->useStorage(dirname(__FILE__) . '/system/dbs/upcloo.sqlite');</pre>
 +--------------------------+
 +    your_content_id_3     +
 +--------------------------+</pre>
+                <p><strong><a href="/sdk/php/local-storage.html">See here</a></strong> for more 
+                    details around this component.</p>
             </div>
         </div>
         <div class="row">
