Minor on license

--- a/entries/mit-license.twig
+++ b/entries/mit-license.twig
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="span12">
                 <h1>UpCloo OpenSource license</h1>
-                <p class="lead">Alll UpCloo OpenSource code are released under MIT license if not otherwise specified.</p>
+                <p class="lead">All UpCloo OpenSource code are released under MIT license if not otherwise specified.</p>
             </div>
         </div>
     </header>
