Templates for WP and Chart for performances

--- a/entries/application/wordpress.twig
+++ b/entries/application/wordpress.twig
@@ -45,5 +45,38 @@ providers:
                 </p>
             </div>
         </div>
+        <div class="row">
+            <div class="span12">
+                <h1>Working on UpCloo WordPress Plugin</h1>
+            </div>
+            <div class="span6">
+                <p>
+                    <a href="/application/wordpress/template-results.html" class="big-text">Template Results</a> 
+                    Using CSS techniques.
+                </p>
+                <p>
+                    <a href="#" class="big-text">Template Results Rewrite</a> Using a completely 
+                    personalized template.
+                </p>
+                <p>
+                    <a href="#" class="big-text">Template Widget Results</a> Using a completely 
+                    personalized template for widgets.
+                </p>
+                <p>
+                    <a href="#" clasS="big-text">Template Search Results</a> Using a completely 
+                    personalized template for search service.
+                </p>            
+            </div>
+            <div class="span6">
+                <p>
+                    <a href="/application/wordpress/remote-importer.html" class="big-text">Enable Remote Importer</a> 
+                    Activate the remote importer for enable the UpCloo crawler.
+                </p>
+                <p>
+                    <a href="#" class="big-text">UpCloo Search</a> 
+                    Activate UpCloo Search service.
+                </p>
+            </div>
+        </div>
     </section>
 </div>
