--- a/entries/documentation/performance.twig
+++ b/entries/documentation/performance.twig
@@ -19,9 +19,53 @@
                 amount of time needed to handle requests.
             </p>
         </div>
-        <div class="span6">
-            <img src="https://chart.googleapis.com/chart?cht=ls&chd=t:48.53,49.23,49.07,54.75,48.9,42.71,35.73,42.94,40.6,43.9,44.47,43.52,42.75,42.49,42.83,42.33,43.8,42.82,46.87,51.79,44.92,45.97,45.22,47.1&chs=600x300&chxt=x,y&chxl=0:|0|5|10|15|20|23|1:|0|25|50|75|100&chg=5,10,0,0&chdl=Response+Time+%5Bms%5D+vs+Hour+of+a+Day&chdlp=b&chtt=UpCloo" alt="performance" />
-            
+        <div class="span12" id="visualization">
+            &nbsp;
         </div>
     </div>
 </div>
+<script type="text/javascript" src="https://www.google.com/jsapi"></script>
+<script type="text/javascript">
+google.load("visualization", "1", {packages:["corechart"]});
+google.setOnLoadCallback(drawVisualization);
+function drawVisualization() {
+  // Create and populate the data table.
+  var data = google.visualization.arrayToDataTable([
+    ['x', 'App'],
+    ['0',   48.53],
+    ['1',   49.23],
+    ['2',   49.07],
+    ['3',   54.75],
+    ['4',   48.9],
+    ['5',   42.71],
+    ['6',   35.73],
+    ['7',   42.94],
+    ['8',   40.6],
+    ['9',   43.9],
+    ['10',  44.47],
+    ['11',  43.52],
+    ['12',  42.75],
+    ['13',  42.49],
+    ['14',  42.83],
+    ['15',  42.33],
+    ['16',  43.8],
+    ['17',  42.82],
+    ['18',  46.87],
+    ['19',  51.79],
+    ['20',  44.92],
+    ['21',  45.97],
+    ['22',  45.22],
+    ['23',  47.1]
+  ]);
+
+  // Create and draw the visualization.
+  new google.visualization.LineChart(document.getElementById('visualization')).
+      draw(data, {curveType: "function",
+                  /*width: 1024, */height: 400,
+                  vAxis: {maxValue: 10},pointSize: 4,
+                  title: 'UpCloo Response Time',
+                  hAxis:  {title: 'Hour',  titleTextStyle: {color: '#000000'}},
+                  vAxis:  {title: 'Time [ms]',  titleTextStyle: {color: '#000000'}}}
+          );
+}
+</script>
