--- a/entries/github.twig
+++ b/entries/github.twig
@@ -5,7 +5,7 @@
         <li>Source code: <a target="_blank" href="{{ this.providers.sdk.sourcecode }}">See Tree</a></li>
         <li>Archives: <a target="_blank" href="{{ this.providers.sdk.download }}">Packages Download</a></li>
     </ul>
-    <p>UpCloo PHP SDK is released under MIT license. <a href="/mit-license.html">See here</a></p>
+    <p>This project is released under MIT license. <a href="/mit-license.html">See here</a></p>
 </div>
 <div class="span6">
     <h2>Bug Tracking</h2>
