--- a/layouts/topbar.twig
+++ b/layouts/topbar.twig
@@ -1,7 +1,10 @@
 <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
-            <a class="brand" href="/">UpCloo developers</a>
+            <a style="margin:0;padding:0" class="brand" href="/">
+                <img src="/media/img/upcloo-small.png" alt="upcloo"/>
+            </a>
+            <a class="brand" style="color:white" href="/"> developers</a>
             <ul class="nav">
               <li><a href="/mit-license.html">License</a></li>
             </ul>
