--- a/layouts/topbar.twig
+++ b/layouts/topbar.twig
@@ -17,7 +17,7 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a href="/sdk/php.html">PHP 5.2+</a></li>
-                        <li><a href="#">Java SE5</a></li>
+                        <li><a href="/sdk/java.html">Java SE5</a></li>
                         <li><a href="#">.NET C#</a></li>
                         <li class="divider"></li>
                         <li><a href="#">JavaScript</a></li>
