wp rewrite template, fix advanced templating and minor on remote importer

--- a/entries/application/wordpress.twig
+++ b/entries/application/wordpress.twig
@@ -55,8 +55,8 @@ providers:
                     Using CSS techniques.
                 </p>
                 <p>
-                    <a href="#" class="big-text">Template Results Rewrite</a> Using a completely 
-                    personalized template.
+                    <a href="/application/wordpress/rewrite-template.html" class="big-text">Template Results Rewrite</a> 
+                    Using a completely personalized template.
                 </p>
                 <p>
                     <a href="#" class="big-text">Template Widget Results</a> Using a completely 
