--- a/entries/application/wordpress/template-results.twig
+++ b/entries/application/wordpress/template-results.twig
@@ -3,6 +3,12 @@
         <div class="span12">
             <h1>Template Results using CSS</h1>
             <p>
+                For enable this feature you have to select the menu: <code>UpCloo > Templating System</code>
+                and select the <code>Advanced</code> method as preferrered. Now selected what kind of 
+                fields you want to show, for example your title and image, after that save your work and
+                use you template CSS for create new display rules for UpCloo.
+            </p>
+            <p>
                 All elements are under the div having class: <code>upcloo-related-contents</code>.
             </p>
             <p>
