--- a/entries/tools/remote-importer.twig
+++ b/entries/tools/remote-importer.twig
@@ -13,7 +13,7 @@ providers:
         <div class="span12">
             <h1>UpCloo Remote Importer</h1>
             <p class="lead">
-             	UpCloo remote importer is the UpCloo simple crawler that get
+             	UpCloo remote importer is the crawler that get
 				your contents for create the initial index.
             </p>
         </div>
@@ -84,6 +84,7 @@ providers:
                     <li>image - OPTIONAL - the link of image, if missing the first image in the content body will be used.</li>
                     <li>tags - OPTIONAL - comma separated list of content tags.</li>
                     <li>categories - OPTIONAL - comma separated list of content categories.</li>
+                    <li>lang - OPTIONAL - the language of the content</li>
                 </ul>
                 <p>
                     Dynamic tag fields use a different structure, it has a base line that
