WP Widget templating

--- a/entries/application/wordpress.twig
+++ b/entries/application/wordpress.twig
@@ -59,7 +59,7 @@ providers:
                     Using a completely personalized template.
                 </p>
                 <p>
-                    <a href="#" class="big-text">Template Widget Results</a> Using a completely 
+                    <a href="/application/wordpress/template-widget.html" class="big-text">Template Widget Results</a> Using a completely 
                     personalized template for widgets.
                 </p>
                 <p>
