Added search and links

--- a/entries/application/wordpress.twig
+++ b/entries/application/wordpress.twig
@@ -73,7 +73,7 @@ providers:
                     Activate the remote importer for enable the UpCloo crawler.
                 </p>
                 <p>
-                    <a href="#" class="big-text">UpCloo Search</a> 
+                    <a href="/application/wordpress/search.html" class="big-text">UpCloo Search</a> 
                     Activate UpCloo Search service.
                 </p>
             </div>
