--- a/entries/application/wordpress.twig
+++ b/entries/application/wordpress.twig
@@ -59,12 +59,12 @@ providers:
                     Using a completely personalized template.
                 </p>
                 <p>
-                    <a href="/application/wordpress/template-widget.html" class="big-text">Template Widget Results</a> Using a completely 
-                    personalized template for widgets.
+                    <a href="/application/wordpress/template-widget.html" class="big-text">Template Widget Results</a> 
+                    Using a completely personalized template for widgets.
                 </p>
                 <p>
-                    <a href="#" clasS="big-text">Template Search Results</a> Using a completely 
-                    personalized template for search service.
+                    <a href="/application/wordpress/template-search.html" clasS="big-text">Template Search Results</a> 
+                    Using a completely personalized template for search service.
                 </p>            
             </div>
             <div class="span6">
